[workspace]
resolver = "2"
members = [
    "backend/batan",
    "backend/monaxia",
    "backend/monaxia-data",
    "backend/monaxia-db",
    "backend/monaxia-job",
    "backend/monaxia-repository",
]

[workspace.dependencies]
anyhow = "1.0.71"
async-trait = "0.1.72"
once_cell = "1.18.0"
regex = "1.9.1"
rsa = "0.9.2"
sea-query = { version = "0.30.0", features = [
    "derive",
    "thread-safe",
    "with-time",
    "with-uuid",
    "with-json",
] }
sea-query-binder = { version = "0.5.0", features = [
    "sqlx-postgres",
    "with-time",
    "with-uuid",
    "with-json",
] }
serde = { version = "1.0.171", features = ["derive"] }
serde_json = "1.0.103"
sqlx = { version = "0.7.1", features = [
    "runtime-tokio",
    "postgres",
    "json",
    "uuid",
    "time",
] }
time = { version = "0.3.23", features = [
    "macros",
    "alloc",
    "formatting",
    "parsing",
    "serde",
] }
thiserror = "1.0.44"
tokio = { version = "1.29.1", features = ["full"] }
tokio-stream = { version = "0.1.14", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
url = { version = "2.4.0", features = ["serde"] }
uuid = { version = "1.4.1", features = ["v4", "v7", "fast-rng"] }

monaxia-data = { path = "./backend/monaxia-data" }
monaxia-db = { path = "./backend/monaxia-db" }
monaxia-job = { path = "./backend/monaxia-job" }
monaxia-repository = { path = "./backend/monaxia-repository" }

[profile.dev.package.num-bigint-dig]
opt-level = 3
