[workspace]
resolver = "2"
members = ["batan", "monaxia"]

[workspace.dependencies]
anyhow = "1.0.71"
once_cell = "1.18.0"
sea-query = { version = "0.29.1", features = [
    "derive",
    "thread-safe",
    "with-time",
    "with-uuid",
    "with-json",
] }
serde = { version = "1.0.171", features = ["derive"] }
serde_json = "1.0.103"
sqlx = { version = "0.7.1", features = [
    "runtime-tokio",
    "postgres",
    "json",
    "uuid",
    "time",
] }
time = { version = "0.3.23", features = [
    "macros",
    "alloc",
    "formatting",
    "parsing",
    "local-offset",
    "serde",
] }
tokio = { version = "1.29.1", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
url = { version = "2.4.0", features = ["serde"] }
