[package]
name = "monaxia-data"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
once_cell = { workspace = true }
regex = { workspace = true }
rsa = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
url = { workspace = true }
uuid = { workspace = true }

toml = "0.7.6"

monaxia-db = { workspace = true }
