[package]
name = "monaxia-data"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
once_cell = { workspace = true }
regex = { workspace = true }
rsa = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }
uuid = { workspace = true }

base64 = "0.21.2"
hex = "0.4.3"
serde_bytes = "0.11.12"
toml = "0.7.6"

monaxia-db = { workspace = true }
