[package]
name = "monaxia-queue"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = { workspace = true }
bincode = { workspace = true }
futures = { workspace = true }
lapin = { workspace = true }
once_cell = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
