[package]
name = "monaxia"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
lapin = { workspace = true }
once_cell = { workspace = true }
rsa = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
url = { workspace = true }

axum = "0.6.18"
axum-extra = "0.7.4"
clap = { version = "4.3.11", features = ["derive"] }
inquire = "0.6.2"
mime = "0.3.17"
rand = "0.8.5"
reqwest = { version = "0.11.18", features = ["json"] }
serde_variant = "0.1.2"
tower-http = { version = "0.4.3", features = ["trace"] }

monaxia-data = { workspace = true }
monaxia-db = { workspace = true }
monaxia-job = { workspace = true }
monaxia-repository = { workspace = true }
monaxia-queue = { workspace = true }
