[package]
name = "monaxia"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
axum = { workspace = true }
axum-extra = { workspace = true }
futures = { workspace = true }
lapin = { workspace = true }
mime = { workspace = true }
once_cell = { workspace = true }
rsa = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
url = { workspace = true }

clap = { version = "4.3.11", features = ["derive"] }
inquire = "0.6.2"
rand = "0.8.5"
reqwest = { version = "0.11.18", features = ["json"] }
serde_variant = "0.1.2"
sha2 = { version = "0.10.7", features = ["oid"] }
tower-http = { version = "0.4.3", features = ["trace"] }

monaxia-ap = { workspace = true }
monaxia-data = { workspace = true }
monaxia-db = { workspace = true }
monaxia-job = { workspace = true }
monaxia-repository = { workspace = true }
monaxia-queue = { workspace = true }
