[package]
name = "monaxia"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
axum = { workspace = true }
axum-extra = { workspace = true }
clap = { workspace = true }
futures = { workspace = true }
inquire = { workspace = true }
lapin = { workspace = true }
mime = { workspace = true }
once_cell = { workspace = true }
rand = { workspace = true }
reqwest = { workspace = true }
rsa = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_variant = { workspace = true }
sha2 = { workspace = true }
sqlx = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
url = { workspace = true }

monaxia-ap = { workspace = true }
monaxia-data = { workspace = true }
monaxia-db = { workspace = true }
monaxia-job = { workspace = true }
monaxia-repository = { workspace = true }
monaxia-queue = { workspace = true }
